--- a/EF_Book_DataApp/Views/Home/Index.cshtml
+++ b/EF_Book_DataApp/Views/Home/Index.cshtml
@@ -5,6 +5,22 @@
     Layout = "_Layout";
 }
 
+<div class="m-1 p-2">
+    <form asp-action="Index" method="get" class="form-inline">
+        <label class="m-1">Category:</label>
+        <select name="category" class="form-control">
+            <option value="">Все товары</option>
+            <option selected="@(ViewBag.Category == "Фрукты")">Фрукты</option>
+            <option selected="@(ViewBag.Category == "Овощи")">Овощи</option>
+            <option selected="@(ViewBag.Category == "Хлебобулочные изделия")">Хлебобулочные изделия</option>
+            <option selected="@(ViewBag.Category == "Молочная продукция")">Молочная продукция</option>
+        </select>
+        <label class="m-1">Минимальная цена:</label>
+        <input class="form-control" name="price" value="@ViewBag.Price" />
+        <button class="btn btn-primary m-1">Отфильтровать</button>
+    </form>
+</div>
+
 <table class="table table-sm table-striped">
     <thead>
         <tr>
