--- a/EF_Book_DataApp/Views/Home/Index.cshtml
+++ b/EF_Book_DataApp/Views/Home/Index.cshtml
@@ -77,6 +77,11 @@
                     </form>
                 </td>
             </tr>
+            <tr>
+                <td colspan="6">
+                    @await Html.PartialAsync("SupplierRelated", p.Supplier)
+                </td>
+            </tr>
         }
     </tbody>
 </table>
